--- a/configs/default_config.yml
+++ b/configs/default_config.yml
@@ -1,10 +1,9 @@
-save_experiment: true
 batch_size: 1000
-epochs: 10000
+epochs: 3000
 data_loader: default_data_loader.DataLoader
-model: default_model.Model
+model: 8layers.Model
 trainer: default_trainer.Trainer
-use_experiment: '2022_09_06__19_37_31'
+use_experiment: 'old'
 
 test_size: 0.2
-learning_rate: 0.0001
+learning_rate: 0.001
